# tao-gateway

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Caddyfile  Dockerfile  LICENSE  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
_bmad-output/implementation-artifacts/: 1-1-project-scaffold-and-health-endpoint.md  1-2-developer-account-and-api-key-creation.md  1-3-bittensor-integration-and-miner-selection.md  1-4-sn1-text-generation-endpoint.md  1-5-streaming-responses-and-request-cancellation.md  2-1-sn19-image-generation-endpoint.md  2-2-sn62-code-generation-endpoint.md  2-3-subnet-discovery-and-health.md  2-4-adapter-registry-and-extensibility.md  3-1-rate-limiting-engine.md  3-2-error-handling-and-response-metadata.md  3-3-security-hardening.md  3-4-in-memory-quality-scoring.md  4-1-dashboard-shell-and-authentication.md  4-2-api-key-management.md  4-3-account-overview-and-quickstart.md  4-4-api-client-generation-and-dashboard-build-pipeline.md  5-1-usage-metering-and-storage.md  5-2-usage-dashboard-and-quota-display.md  5-3-debug-mode-and-content-cleanup.md  6-1-admin-api-endpoints.md  6-2-operator-dashboard-views.md  6-3-production-deployment-pipeline.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-03-12.md  prd-validation-report.md  prd.md  product-brief-tao-gateway-2026-03-11.md  ux-design-directions.html  ux-design-specification.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
dashboard/: package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
docs/plans/: 2026-03-13-code-scan-plan.md  2026-03-13-security-scan-plan.md  2026-03-14-code-scan-plan-b.md  2026-03-14-code-scan-plan.md  2026-03-14-security-scan-plan.md  2026-03-15-code-scan-plan.md
gateway/: main.py
gateway/api/: _subnet_handler.py  admin.py  api_keys.py  auth.py  chat.py  code.py  dashboard.py  detection.py  health.py  images.py  models.py  router.py  search.py  usage.py
gateway/core/: bittensor.py  config.py  constants.py  database.py  exceptions.py  logging.py  rate_limit.py  redis.py  security.py
gateway/middleware/: auth.py  error_handler.py  rate_limit.py  security_headers.py  usage.py
gateway/models/: __init__.py  api_key.py  base.py  daily_usage_summary.py  debug_log.py  miner_score.py  organization.py  refresh_token.py  usage_record.py
gateway/routing/: metagraph_sync.py  scorer.py  selector.py
gateway/schemas/: admin.py  api_keys.py  auth.py  chat.py  code.py  dashboard.py  detection.py  errors.py  health.py  images.py  models.py  search.py  usage.py
gateway/services/: admin_service.py  api_key_service.py  auth_service.py  usage_service.py
gateway/subnets/: __init__.py  base.py  factory.py  registry.py  sn19_image.py  sn1_text.py  sn22_search.py  sn32_detect.py  sn62_code.py
gateway/tasks/: debug_cleanup.py  score_flush.py  usage_aggregation.py
migrations/: env.py
scripts/: dendrite_reliability_test.py  generate_api_client.sh  rate_limit.lua
tests/: conftest.py
(+139 files in other folders)
