[project]
name = "tao-gateway"
version = "0.1.0"
description = "REST API gateway for the Bittensor decentralized AI network"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pydantic[email]>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "redis[hiredis]>=5.0,<6",
    "bittensor>=10,<11",
    "argon2-cffi>=23.1,<24",
    "structlog>=24.0,<26",
    "pyjwt[crypto]>=2.12.1,<3",
    "nh3>=0.3.3,<1",
    "pip-audit>=2.7,<3",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5,<6",
    "httpx>=0.27,<1",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "pre-commit>=4,<5",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "B008",  # Depends() in function defaults — standard FastAPI pattern
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["bittensor.*", "redis.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["gateway"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
